--- a/index.html
+++ b/index.html
@@ -9,22 +9,54 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/1e08f27063.js" crossorigin="anonymous"></script>
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- Jquery script -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
   </head>
   <body>
-    <div class="nav">
-      <ul>
-        <li class="left"><a class="active" href="#para">Home</a></li>
-        <li class="left"><a href="#news">About</a></li>
-        <li class="left"><a href="#contact">Orders</a></li>
-        <li class="left"><a href="#about">Contacts</a></li>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <li class="right"><a class="active" href="#div1">Section 1</a></li>
-        <li class="right"><a href="#pic2">Address</a></li>
-        <li class="right"><a href="#div2">Section 2</a></li>
-        <li class="right"><a href="#about">New</a></li>
-        <li class="center"> <img src="images/logo1.png" alt="logo" class="image">  </i></li>
-      </ul>
-    </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+
+          <ul class="navbar-nav ml-auto list">
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#hire">Hire</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <a class="navbar-brand" href="#title"> <img class="image" src="images/logo1.png" alt="">  </a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto list">
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#hire">Hire</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <a class="navbar-brand" href="#title"> <img class="image1" src="images/logo1.png" alt="">  </a>
+        </div>
+      </nav>
+      </div>
 
     <div class="parallax" id="para">
       <div class="title-text">
@@ -35,7 +67,7 @@
     </div>
 
     <div class="first" id="div1">
-      <div class="text1">
+      <div class="text1  center">
         <h2>Section 1</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -52,7 +84,7 @@
     </div>
 
     <div class="second" id="div2">
-      <div class="text3">
+      <div class="text3 center">
         <h2>Section 2</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -65,7 +97,7 @@
       </div>
     </div>
     <div class="third" id="div2">
-      <div class="text5">
+      <div class="text5 center">
         <h2>Section 5</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
